--- a/Newnew/index.html
+++ b/Newnew/index.html
@@ -9,8 +9,8 @@
 <body>
   <form action="" class="formulario-de-notas">
     <h2>Introduce la nota del alumno</h2>
-    <input type="number" id="nota-alumno ">
-    <input type="button" name="" value="Otorgar Nota" id="enviar-nota">
+    <input type="number" id="nota" min="0" max="10">
+    <input type="button" name="" value="Otorgar Nota" id="snd-nota">
   </form>
   
   <script src="app.js"></script>
